@@ -2,6 +2,7 @@
 0.0.52
 ========================
 
+- extended `index.d.ts` by @Helferino
 
 ========================
 0.0.51
